--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nft-project",
   "version": "0.1.0",
+  "proxy": "https://testnets.opensea.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -36,5 +37,4 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://testnets.opensea.io/"
 }
